Commiting hp changes

--- a/clients/hanaye/src/assets/i18n/ar.json
+++ b/clients/hanaye/src/assets/i18n/ar.json
@@ -1,5 +1,8 @@
 {
   "APP_NAME": "الحناية",
+  "NO_PRODUCTS": "لا توجد منتجات ",
+  "UPDATE": "تحديث التطبيق",
+  "UPDATE_TEXT": "الرجاء تحديث التكبيق من أجل الاستمرتر في استخدام التطبيق",
   "NAV": {
     "HOME": "الرئيسية",
     "WORK": "تطبيق العمال",
@@ -19,7 +22,7 @@
   "HOME": {
     "HEADERS": {
       "PROVIDERS": "مقدمات الخدمات",
-      "FEATS": "خصيصا لكي",
+      "FEATS": "منتجات مميزة",
       "PRODUCTS": "المنتجات"
     },
     "HELLO": "مرحبا",
