Preparation for ios upload

--- a/clients/hanaye/src/assets/i18n/ar.json
+++ b/clients/hanaye/src/assets/i18n/ar.json
@@ -12,7 +12,9 @@
     "SHARE": "مشاركة التطبيق",
     "RATE": "تقويم التطبيق",
     "LOGOUT": "تسجبل الخروج",
-    "LANG": "قم بتغير لغة التطبيق"
+    "LANG": "قم بتغير لغة التطبيق",
+    "ABOUT": "حولنا",
+    "ABOUT_DETAILS": "لمزيد من التفاصيل تواصل معنا"
   },
   "TABS": {
     "HOME": "الرئيسية",
