Preparation for ios upload

--- a/clients/hanaye_mobile/src/assets/i18n/ar.json
+++ b/clients/hanaye_mobile/src/assets/i18n/ar.json
@@ -12,7 +12,9 @@
     "SHARE": "مشاركة التطبيق",
     "RATE": "تقويم التطبيق",
     "LOGOUT": "تسجبل الخروج",
-    "LANG": "قم بتغير لغة التطبيق"
+    "LANG": "قم بتغير لغة التطبيق",
+    "ABOUT": "حولنا",
+    "ABOUT_DETAILS": "لمزيد من التفاصيل تواصل معنا"
   },
   "TABS": {
     "HOME": "الرئيسية",
@@ -65,7 +67,9 @@
     "DELETE": "حذف الحساب",
     "DELETE_MSG": "لماذا تريد حذف حسابك؟ ",
     "DELETE_DETAILS": "من اجل حذف الحساب تواصل معنا على الايميل أو الهاتف",
-    "DELETE_EMAIL": "تواصل معنا"
+    "DELETE_EMAIL": "تواصل معنا",
+    "DELETE_DONE": "لقد تم الحذف",
+    "DELETE_UNDONE": "لم يتم الحذف"
   },
   "REGISTRATION": {
     "REGISTER": "تسجبل",
