--- a/clients/hanaye_mobile/src/assets/i18n/en.json
+++ b/clients/hanaye_mobile/src/assets/i18n/en.json
@@ -12,7 +12,9 @@
     "SHARE": "partager l'application",
     "RATE": "évaluer l'application",
     "LOGOUT": "Logout",
-    "LANG": "Change the App language"
+    "LANG": "Change the App language",
+    "ABOUT": "About",
+    "ABOUT_DETAILS": "For more details contact us"
   },
   "TABS": {
     "HOME": "Home",
@@ -66,7 +68,9 @@
     "DELETE": "Delete account",
     "DELETE_MSG": "Why do you want to delete your account? ",
     "DELETE_DETAILS": "For deleting your account, contact us via email or WhatsApp",
-    "DELETE_EMAIL": "Contact Us"
+    "DELETE_EMAIL": "Contact Us",
+    "DELETE_DONE": "Account deleted successfull",
+    "DELETE_UNDONE": "Could not delete account"
   },
   "REGISTRATION": {
     "REGISTER": "Register",
