--- a/clients/hanaye_mobile/src/assets/i18n/fr.json
+++ b/clients/hanaye_mobile/src/assets/i18n/fr.json
@@ -10,7 +10,9 @@
     "SHARE": "partager l'application",
     "RATE": "évaluer l'application",
     "LOGOUT": "Se déconnecter",
-    "LANG": "Changer la Langue"
+    "LANG": "Changer la Langue",
+    "ABOUT": "Info",
+    "ABOUT_DETAILS": "Pour plus des information contactez nos"
   },
   "TABS": {
     "HOME": "Accueil",
@@ -64,7 +66,9 @@
     "DELETE": "Suprimer le compt",
     "DELETE_MSG": "Pour quoi vous voulez suprimer voter compt?",
     "DELETE_DETAILS": "Pour suprimer votre compt contacter nous sur email or WhatsApp",
-    "DELETE_EMAIL": "Contacter Nous"
+    "DELETE_EMAIL": "Contacter Nous",
+    "DELETE_DONE": "Le compte a été supprimé ",
+    "DELETE_UNDONE": "Le compte n'a pas été supprimé"
   },
   "REGISTRATION": {
     "REGISTER": "Enregistrer",
